Making content width larger to prevent wrapping

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -131,7 +131,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48rem) {
   .content {
-    max-width: 38rem;
+    max-width: 46rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
